# CodeGambit

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml
.claude/plans/legion-codegambit-review/: project-tasks.md
.github/workflows/: ci.yml
backend/: .env.example  pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/api/: challenges.py  health.py  submissions.py  users.py
backend/app/models/: __init__.py  challenge.py  elo_history.py  evaluation.py  submission.py  user.py
backend/app/schemas/: __init__.py  challenge.py  evaluation.py  submission.py  user.py
backend/app/services/: calibration.py  challenge_loader.py  challenge_service.py  elo.py  evaluator.py  sandbox.py
backend/app/services/prompts/: __init__.py  adversarial.py  collaborative.py  socratic.py
backend/tests/: conftest.py  test_api_challenges.py  test_api_submissions.py  test_api_users.py  test_calibration.py  test_challenge_loader.py  test_challenge_service.py  test_elo.py  test_evaluator.py  test_sandbox.py  test_smoke.py
challenges/: example.yaml  schema.md
challenges/calibration/: cal-001-hello-langchain.yaml  cal-002-simple-prompt.yaml  cal-003-basic-chain.yaml  cal-004-output-parser.yaml  cal-005-rag-basic.yaml  cal-006-memory-chain.yaml  cal-007-agent-tools.yaml  cal-008-multi-retriever.yaml  cal-009-langgraph-flow.yaml  cal-010-production-agent.yaml
docker/sandbox/: Dockerfile
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: ELOChart.tsx  (+9 more)
(+30 files in other folders)
